--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     password: Lyc123456
     url: jdbc:mysql://localhost:3306/kejia
     driver-class-name: com.mysql.cj.jdbc.Driver
+server:
+  port: 8080
